internal/exp/app/{changes,issues}app: prefer flex for layout
Replace use of float and table-cell for horizontal layout with flex.
This is simpler and avoids layout problems in some edge cases, like
multiple sequential +2 code reviews (where the user avatars used to
stack unintentionally to the right).

--- a/internal/exp/app/changesapp/_data/style.css
+++ b/internal/exp/app/changesapp/_data/style.css
@@ -96,12 +96,7 @@ code {
 	line-height: 1.2;
 }
 
-span.content {
-	display: table-cell;
-	width: 100%;
-}
 span.right-icon {
-	display: table-cell;
 	padding-left: 12px;
 	padding-right: 4px;
 }
@@ -165,6 +160,7 @@ textarea.comment-editor:focus {
 }
 
 .event {
+	display: flex;
 	margin-left: 58px;
 }
 .event-header {
@@ -173,12 +169,12 @@ textarea.comment-editor:focus {
 	line-height: 20px;
 }
 .event-icon {
-	float: left;
 	margin-right: 10px;
 	width: 28px;
 	height: 28px;
 	display: flex; justify-content: center; align-items: center;
 	border-radius: 50%;
+	flex-shrink: 0;
 }
 
 header.list-entry-header nav a {
